Final submission: complete EventZen full stack event management system